# BOOKMARKME

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  cli.py
src/bookmarkme/: __init__.py  cache.py  cli.py  organizer.py  parser.py
tests/: sample_bookmarks.html
